bug fix - fix socket not working - fix effect not showing

--- a/src/assets/css/messenger.scss
+++ b/src/assets/css/messenger.scss
@@ -7,6 +7,7 @@
 canvas {
   position: absolute;
   top: 0;
+  left: -35%;
   z-index: -1;
 }
 
